# presidio-hardened-crypto-channel

./: .gitignore  MAINTENANCE.md  PRESIDIO-REQ.md  README.md  SECURITY.md  bootstrap.py  main.py  pyproject.toml  report.py
.github/workflows/: ci.yml  publish.yml
src/presidio_crypto_channel/: __init__.py  channel.py  keyexchange.py  security.py  symmetric.py
tests/: conftest.py  test_channel.py  test_keyexchange.py  test_symmetric.py
