[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-crypto-channel"
version = "0.1.0"
description = "Secure cryptographic channel demonstrating ECDH, AES-256-GCM, and HMAC integrity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vladimir Stantchev" }]
keywords = ["cryptography", "ecdh", "aes-gcm", "hmac", "security", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-crypto-channel"
Repository = "https://github.com/presidio-v/presidio-hardened-crypto-channel"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_crypto_channel"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
